--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Shadow Dog Animations</title>
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="icon" href="shadow_dog_logo.png" type="image/x-icon">
     </head>
     <body>
         
