--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Shadow Dog Animations</title>
-        <link rel="stylesheet" href="style.css"/>
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="icon" href="shadow_dog_logo.png" type="image/x-icon">
-    </head>
-    <body>
-        
-        <h1>Choose Animation:</h1>
-        <div class="controls">
-            <button class="w3-button w3-black" id="button1">Idle</button>
-            <button class="w3-button w3-black" id="button2">Jump</button>
-            <button class="w3-button w3-black" id="button3">Fall</button>
-            <button class="w3-button w3-black" id="button4">Run</button>
-            <button class="w3-button w3-black" id="button5">Dizzy</button>
-            <button class="w3-button w3-black" id="button6">Sit</button>
-            <button class="w3-button w3-black" id="button7">Roll</button>
-            <button class="w3-button w3-black" id="button8">Bite</button>
-            <button class="w3-button w3-black" id="button9">KO</button>
-            <button class="w3-button w3-black" id="button10">Get hit</button>
-        </div>
-        <canvas id="canvas1"></canvas>
-        <script src="script.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Shadow Dog Animations</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link rel="icon" href="shadow_dog_logo.png" type="image/x-icon" />
+  </head>
+  <body>
+    <h1 style="font-size: 30px">Choose Animation:</h1>
+    <div class="controls">
+      <button class="w3-button w3-medium w3-black" id="button1">Idle</button>
+      <button class="w3-button w3-medium w3-black" id="button2">Jump</button>
+      <button class="w3-button w3-medium w3-black" id="button3">Fall</button>
+      <button class="w3-button w3-medium w3-black" id="button4">Run</button>
+      <button class="w3-button w3-medium w3-black" id="button5">Dizzy</button>
+      <button class="w3-button w3-medium w3-black" id="button6">Sit</button>
+      <button class="w3-button w3-medium w3-black" id="button7">Roll</button>
+      <button class="w3-button w3-medium w3-black" id="button8">Bite</button>
+      <button class="w3-button w3-medium w3-black" id="button9">KO</button>
+      <button class="w3-button w3-medium w3-black" id="button10">
+        Get hit
+      </button>
+    </div>
+    <div class="speed-slider">
+      <p style="font-size: 30px; margin-bottom: 20px; margin-top: 0">
+        Choose Speed:
+      </p>
+      <div class="range-container">
+        <input type="range" name="range" id="range" min="0" max="10" />
+        <label for="range">5</label>
+      </div>
+    </div>
+    <canvas id="canvas1"></canvas>
+    <script src="script.js"></script>
+  </body>
 </html>
